--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,6 +10,9 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="ueb.styles.css" rel="stylesheet" />
+
+    <script src="/js/app.js"></script>
+
 </head>
 
 <body>
