--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,7 +11,10 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="ueb.styles.css" rel="stylesheet" />
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dexie/3.2.2/dexie.min.js" integrity="sha512-/Aa8vGWIh0EnOTIVN/ZWTS3UqyJJDhWYtIPS/IqtaaSG0VA6hC6CSvtWdh2+T72q74+2l1RFgu+ig91LGLX57A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="/js/app.js"></script>
+    <script src="/js/idb.js"></script>
 
 </head>
 
